button align fix

--- a/css/slideshow0.css
+++ b/css/slideshow0.css
@@ -161,7 +161,6 @@
   padding: 20px 30px;
   margin: 4px 10px 10px 10px;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
